set(GVW_CURRENT_TARGET glfw_types)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(${GVW_CURRENT_TARGET} "${GVW_CURRENT_TARGET}.cpp")
target_link_libraries(${GVW_CURRENT_TARGET} PRIVATE ${GVW_AVAILABLE})
add_custom_command(TARGET ${GVW_CURRENT_TARGET} POST_BUILD COMMAND $<TARGET_FILE:${GVW_CURRENT_TARGET}>)